--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.16.6",
     "next": "14.2.3",
     "react": "^18",
