--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-css": "sass src/app/globals.scss dist/app/globals.css"
   },
   "dependencies": {
     "@react-three/drei": "^9.117.3",
@@ -24,6 +25,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "sass": "^1.82.0",
+    "sass-loader": "^16.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
