--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.16.6",
+    "gsap": "^3.12.5",
     "lamina": "^1.1.23",
     "next": "14.2.3",
     "react": "^18",
