--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-css": "sass src/app/globals.scss dist/app/globals.css"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.16.6",
     "gsap": "^3.12.5",
