--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.16.6",
+    "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
     "lamina": "^1.1.23",
     "next": "14.2.3",
@@ -24,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lottie": "^1.2.10",
     "@types/three": "^0.164.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
